src/tokens.css
:root {
  color-scheme: light;
  --background: 0 0% 94.9%;
  --foreground: 240 10% 0%;
  --paper: 240 4.8% 100%;
  /* --paper2: var(--paper); */

  --card: var(--paper);
  --card-foreground: 240 10% 5.9%;

  --popover: var(--paper);
  --popover-foreground: 240 10% 5.9%;

  --primary: 240 5.9% 10%;
  --primary-foreground: 0 0% 98%;

  --secondary: 240 4.8% 95.9%;
  --secondary-foreground: 240 5.9% 10%;

  --muted: 240 4.8% 95.9%;
  --muted-foreground: 240 3.8% 46.1%;

  --accent: 240 4.8% 95.9%;
  --accent-foreground: 240 5.9% 10%;

  --destructive: 0 72.22% 50.59%;
  --destructive-foreground: 0 0% 98%;

  --border: 240 5.9% 88%;
  --input: 240 5.9% 88%;
  --ring: 240 10% 5.9%;

  --radius: 0.5rem;

  --sidebar-background: var(--paper);
  --sidebar-foreground: 240 5.3% 26.1%;
  --sidebar-primary: 240 5.9% 10%;
  --sidebar-primary-foreground: 0 0% 98%;
  --sidebar-accent: 240 4.8% 95.9%;
  --sidebar-accent-foreground: 240 5.9% 10%;
  --sidebar-border: 220 13% 91%;
  --sidebar-ring: 217.2 91.2% 59.8%;

  --chart-1: 12 76% 61%;
  --chart-2: 173 58% 39%;
  --chart-3: 197 37% 24%;
  --chart-4: 43 74% 66%;
  --chart-5: 27 87% 67%;

  --link: 170 54% 41%;
}

:root [data-theme="dark"] {
  color-scheme: dark;
  --background: 240 3.7% 6%;
  --foreground: 0 0% 98%;
  --paper: 240 3.7% 7.9%;

  --card: var(--paper);
  --card-foreground: 0 0% 98%;

  --popover: var(--paper);
  --popover-foreground: 0 0% 98%;

  --primary: 0 0% 98%;
  --primary-foreground: 240 5.9% 10%;

  --secondary: 240 3.7% 15.9%;
  --secondary-foreground: 0 0% 98%;

  --muted: 240 3.7% 15.9%;
  --muted-foreground: 240 5% 64.9%;

  --accent: 240 3.7% 15.9%;
  --accent-foreground: 0 0% 98%;

  --destructive: 0 84% 60%;
  --destructive-foreground: 240 10% 5.9%;

  --border: 240 3.7% 14.9%;
  --input: 240 3.7% 14.9%;
  --ring: 240 4.9% 83.9%;

  --sidebar-background: var(--paper);
  --sidebar-foreground: 240 4.8% 95.9%;
  --sidebar-primary: 224.3 76.3% 48%;
  --sidebar-primary-foreground: 0 0% 100%;
  --sidebar-accent: 240 3.7% 15.9%;
  --sidebar-accent-foreground: 240 4.8% 95.9%;
  --sidebar-border: 240 3.7% 15.9%;
  --sidebar-ring: 217.2 91.2% 59.8%;

  --chart-1: 220 70% 50%;
  --chart-2: 160 60% 45%;
  --chart-3: 30 80% 55%;
  --chart-4: 280 65% 60%;
  --chart-5: 340 75% 55%;

  --link: 168 54% 62%;
}

